# regex-dfa

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
benches/: bench.rs  bench_default.rs  bench_dfa.rs  bench_dfa_backtracking_table.rs  bench_dfa_backtracking_vm.rs  bench_dfa_prog.rs  bench_dfa_threaded_table.rs  bench_dfa_threaded_vm.rs  bench_dynamic.rs
itertools/: enum.EitherOrBoth.html  enum.FoldWhile.html  enum.Partition.html  fn.assert_equal.html  fn.equal.html  fn.partition.html  index.html  struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.ChunksLazy.html  struct.Coalesce.html  struct.Combinations.html  struct.CombinationsN.html  struct.Dedup.html  struct.Flatten.html  struct.Group.html  struct.GroupBy.html  struct.GroupByLazy.html  struct.Groups.html  struct.ISlice.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.KMerge.html  struct.Linspace.html  struct.MendSlices.html  struct.Merge.html  struct.MergeBy.html  struct.MultiPeek.html  struct.PadUsing.html  struct.Product.html  struct.RcIter.html  struct.RepeatCall.html  struct.RepeatN.html  struct.Step.html  struct.Stride.html  struct.StrideMut.html  struct.TakeWhileRef.html  struct.Tee.html  (+8 more)
itertools/misc/: struct.FlatTuples.html  trait.AppendTuple.html  trait.IntoIteratorTuple.html
range_map/: index.html  sidebar-items.js  struct.EltIter.html  struct.PairIter.html  struct.Range.html  struct.RangeIter.html  struct.RangeMap.html  struct.RangeMultiMap.html  struct.RangeSet.html
refinery/: index.html  sidebar-items.js  struct.Partition.html  struct.PartitionIter.html
regex_dfa/: enum.Error.html  index.html  sidebar-items.js  struct.Regex.html  type.Result.html
regex_dfa/error/: enum.Error.html
regex_dfa/regex/: struct.Regex.html
regex_syntax/: enum.ErrorKind.html  enum.Expr.html  enum.Repeater.html  fn.is_punct.html  fn.quote.html  index.html  sidebar-items.js  struct.CharClass.html  struct.ClassRange.html  struct.Error.html  struct.ExprBuilder.html  type.Result.html
regex_syntax/parser/: fn.is_punct.html
src/: .automaton.rs.swp  automaton.rs  backtracking.rs  backwards_char_map.rs  builder.rs  bytes.rs  char_map.rs  dfa.rs  engine.rs  error.rs  graph.rs  lib.rs  look.rs  nfa.rs  prefix.rs  program.rs  regex.rs  searcher.rs  threaded.rs  transition.rs  trie.rs  unicode.rs  utf8.rs
src/dfa/: minimizer.rs  mod.rs  prefix_searcher.rs
src/itertools/: adaptors.rs.html  diff.rs.html  format.rs.html  free.rs.html  groupbylazy.rs.html  intersperse.rs.html  islice.rs.html  kmerge.rs.html  lib.rs.html  linspace.rs.html  minmax.rs.html  misc.rs.html  pad_tail.rs.html  rciter.rs.html  repeatn.rs.html  size_hint.rs.html  sources.rs.html  stride.rs.html  tee.rs.html  zip_eq.rs.html  zip_longest.rs.html  zipslices.rs.html  (+1 more)
tests/: matches.rs  tests.json  tests.rs
(+70 files in other folders)
