[package]
name = "regex_dfa"
version = "0.2.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
description = "A crate for turning regexes into DFAs."
documentation = "http://jneem.github.io/regex-dfa"
homepage = "http://jneem.github.io/regex-dfa"
repository = "http://github.com/jneem/regex-dfa"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
ascii_set = "0.1.0"
regex = "0.1.41"
regex-syntax = "0.2.1"
bit-set = "0.2.0"
memchr = "0.1.5"

[dev-dependencies]
rand = "0.3"
serde_json = "0.6"

[profile.release]
debug = true

[[bench]]
name = "dynamic"
path = "benches/bench_dynamic.rs"
test = false
bench = true

[[bench]]
name = "dfa"
path = "benches/bench_dfa_prog.rs"
test = false
bench = true

