[package]
name = "regex_dfa"
version = "0.4.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
description = "A crate for turning regexes into DFAs."
documentation = "http://jneem.github.io/regex-dfa"
homepage = "http://jneem.github.io/regex-dfa"
repository = "http://github.com/jneem/regex-dfa"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
aho-corasick = "0.4"
regex-syntax = "0.2.2"
bit-set = "0.2.0"
memchr = "0.1.6"
memmem = "0.1.0"
utf8-ranges = "0.1.3"
itertools = "0.4"

[dev-dependencies]
regex = "0.1.41"
rand = "0.3"
serde_json = "0.6"

[[bench]]
name = "dynamic"
path = "benches/bench_dynamic.rs"
test = false
bench = true

[[bench]]
name = "backtracking_table"
path = "benches/bench_dfa_backtracking_table.rs"
test = true
bench = true

[[bench]]
name = "backtracking_vm"
path = "benches/bench_dfa_backtracking_vm.rs"
test = true
bench = true

[[bench]]
name = "threaded_table"
path = "benches/bench_dfa_threaded_table.rs"
test = true
bench = true

[[bench]]
name = "threaded_vm"
path = "benches/bench_dfa_threaded_vm.rs"
test = true
bench = true

